images and svg prepared, global styles implimented

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>pro Interactive Photos for U</title>
+  <title>colorNew test project</title>
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
   <link rel="preload" href="fonts/SF-UI-DisplayRegular.woff" as="font" crossorigin>
   <link rel="preload" href="fonts/SF-UI-DisplayBold.woff" as="font" crossorigin>
@@ -17,7 +17,7 @@
   <header class="main-header container">
   </header>
   <main class="main-body container">
-
+    test
   </main>
   <footer class="main-footer container">
 
