--- a/source/index.html
+++ b/source/index.html
@@ -15,9 +15,31 @@
     <include src="build/img/sprite.svg"></include>
   </div>
   <header class="main-header container">
+    <svg width="28" height="41" viewBox="0 0 28 41" fill="none" class="main-header__logo">
+      <use xlink:href="#logo"></use>
+    </svg>
+    <ul class="main-header__navigation">
+      <li class="main-header__navigation-item"><a href="#">Инвестиции</a></li>
+      <li class="main-header__navigation-item"><a href="#">Займы</a></li>
+      <li class="main-header__navigation-item"><a href="#">Реферальная программа</a></li>
+      <li class="main-header__navigation-item"><a href="#">Блог</a></li>
+      <li class="main-header__navigation-item"><a href="#">О нас</a></li>
+      <li class="main-header__navigation-item"><a href="#">Документы</a></li>
+    </ul>
+    <div class="main-header__controls-wrapper">
+      <svg width="14" height="14" viewBox="0 0 14 14" fill="none" class="main-header__controls-item">
+        <use xlink:href="#play_button"></use>
+      </svg>
+      <svg width="14" height="14" viewBox="0 0 14 14" fill="none" class="main-header__controls-item">
+        <use xlink:href="#maximize_button"></use>
+      </svg>
+      <svg width="17" height="14" viewBox="0 0 17 14" fill="none" class="main-header__controls-item">
+        <use xlink:href="#mute_button"></use>
+      </svg>
+    </div>
+    <button type="button" class="main-header__nav-button button">Открыть меню</button>
   </header>
   <main class="main-body container">
-    test
   </main>
   <footer class="main-footer container">
 
