intro block mobile halfway done

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
   </div>
   <header class="main-header container">
     <a href="index.html" class="main-header__logo">
-      <svg width="28" height="41" viewBox="0 0 28 41" fill="none" >
+      <svg width="28" height="41" viewBox="0 0 28 41" fill="none">
         <use xlink:href="#logo"></use>
       </svg>
     </a>
@@ -30,7 +30,7 @@
     </ul>
     <div class="main-header__controls-wrapper">
       <button type="button" class="button main-header__controls-item">
-        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" >
+        <svg width="14" height="14" viewBox="0 0 14 14" fill="none">
           <use xlink:href="#play_button"></use>
         </svg>
       </button>
@@ -48,6 +48,17 @@
     <button type="button" class="main-header__nav-button button">Открыть меню</button>
   </header>
   <main class="main-body container">
+    <h1 class="visually-hidden">Бридж - иневестиционный фонд</h1>
+    <section class="main-body__intro-block intro-block">
+      <h2 class="intro-block__title">Пассивный доход до <span class="intro-block__title--highlighted">20%</span> годовых
+        на инвестициях в недвижимость. </h2>
+      <a href="#" class="intro-block__link">
+        <p class="intro-block__link-text">Новое видео уже на YouTube</p>
+        <svg width="25" height="22" viewBox="0 0 25 22" fill="none">
+          <use xlink:href="#play_white_icon"></use>
+        </svg>
+      </a>
+    </section>
   </main>
   <footer class="main-footer container">
 
