intro mobile done

--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
   <link rel="preload" href="fonts/SF-UI-DisplayRegular.woff" as="font" crossorigin>
   <link rel="preload" href="fonts/SF-UI-DisplayBold.woff" as="font" crossorigin>
+  <link rel="preload" href="fonts/SF-UI-DisplaySemibold.woff" as="font" crossorigin>
 </head>
 <body>
 <div class="body-container">
